tests/comp/sem/invalid/call_wrong-3.mj
class A {

	public int test(int a) {
		/*** test(true); ***/
	}

	public static void main(String[] args) {
	}

}
